--- a/ref.bib
+++ b/ref.bib
@@ -105,6 +105,16 @@
   address={Malden, MA}
 }
 
+@article{macdonald2015,
+  title={Rethinking Agricultural Trade Relationships in an Era of Globalization},
+  author={MacDonald, Graham K and Brauman, Kate A and Sun, Shipeng and Carlson, Kimberly M and Cassidy, Emily S and Gerber, James S and West, Paul C},
+  journal={BioScience},
+  pages={biu225},
+  year={2015},
+  publisher={Oxford University Press},
+  doi={10.1093/biosci/biu225}
+}
+
 @article{meyfroidt2013,
   title={Globalization of land use: distant drivers of land change and geographic displacement of land use},
   author={Meyfroidt, Patrick and Lambin, Eric F and Erb, Karl-Heinz and Hertel, Thomas W},
@@ -119,7 +129,7 @@
 
 @article{obannon2014,
   title={Globalization of agricultural pollution due to international trade},
-  author={O'Bannon, C and Carr, J and Seekell, DA and D'Odorico, P},
+  author={O'Bannon, Clark and Carr, Joel A and Seekell, David A and D'Odorico, Paolo},
   journal={Hydrology and Earth System Sciences},
   volume={18},
   number={2},
@@ -127,6 +137,17 @@
   year={2014},
   publisher={Copernicus GmbH},
   doi={10.5194/hess-18-503-2014}
+}
+
+@article{pielou1966,
+  title={The measurement of diversity in different types of biological collections},
+  author={Pielou, Evelyn C},
+  journal={Journal of theoretical biology},
+  volume={13},
+  pages={131--144},
+  year={1966},
+  publisher={Elsevier},
+  doi={10.1016/0022-5193(66)90013-0}
 }
 
 @article{porkka2013,
