Incorporate edits from the group (part 2)

--- a/ref.bib
+++ b/ref.bib
@@ -105,6 +105,18 @@
   address={Malden, MA}
 }
 
+@article{lee2011,
+  title={Impact of the topology of global macroeconomic network on the spreading of economic crises},
+  author={Lee, Kyu-Min and Yang, Jae-Suk and Kim, Gunn and Lee, Jaesung and Goh, Kwang-Il and Kim, In-mook and others},
+  journal={PloS one},
+  volume={6},
+  number={3},
+  pages={e18443},
+  year={2011},
+  publisher={Public Library of Science},
+  doi={10.1371/journal.pone.0018443}
+}
+
 @article{macdonald2015,
   title={Rethinking Agricultural Trade Relationships in an Era of Globalization},
   author={MacDonald, Graham K and Brauman, Kate A and Sun, Shipeng and Carlson, Kimberly M and Cassidy, Emily S and Gerber, James S and West, Paul C},
@@ -248,7 +260,8 @@
   author={Tamea, Stefania and Laio, Francesco and Ridolfi, Luca},
   journal={Scientific Reports},
   publisher={Nature Publishing Group},
-  note={In Press}
+  note={In Press},
+  year={2016}
 }
 
 @article{weinzettel2013,
